# StrategyTester5

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: about.md  index.md  installation.md  quickstart.md
docs/api/: index.md
docs/api/metatrader5/: api.md  constants.md  data.md  validators.md
docs/api/strategytester5/: config.md  config_validators.md  stats.md  tester.md
docs/api/trade_classes/: accountinfo.md  dealinfo.md  historyorderinfo.md  orderinfo.md  positioninfo.md  symbolinfo.md  terminalinfo.md  trade.md
docs/documentation/: index.md  logging_debugging.md  rsi_strategy.md  working_with_indicators.md
examples/RSI Strategy/: bot.py
examples/Working With Indicators/: bot.py
examples/martingale bot/: bot.py  tester.json
examples/multicurrency trading bot/: bot.py  parallel.py  single_thread.py  tester.json
examples/multicurrency trading bot/ICMarketsSC-Demo/: account_info.json
examples/simple trading bot/: bot.py  tester.json
strategytester5/: __init__.py  _html_templates.py  config.py  config_validators.py  stats.py  tester.py
strategytester5/MQL5/: _compiler.py  functions.py
strategytester5/MetaTrader5/: __init__.py  _swap.py  api.py  constants.py  data.py  error_description.py  trade_validators.py
strategytester5/hist/: bars.py  manager.py  ticks.py
strategytester5/mt5/: broker_data.py
strategytester5/trade_classes/: AccountInfo.py  DealInfo.py  HistoryOrderInfo.py  OrderInfo.py  PositionInfo.py  SymbolInfo.py  TerminalInfo.py  Trade.py
tests/: hist_manager_test.py  mt5.py  trend_following_backtest.py
(+770 files in other folders)
