[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "strategytester5"
version = "1.6.2"
description = "A Python-based MetaTrader strategy tester for the MetaTrader5 module"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
  { name = "Omega Joctan Msigwa", email = "omegajoctan@gmail.com" }
]

dependencies = [
  "numpy",
  "polars",
  "matplotlib",
  "seaborn",
  "tqdm",
  "numba",
  "scipy"
]

keywords = [
  "MetaTrader5",
  "MetaTrader4",
  "Strategytester",
  "strategytesting",
  "MT5",
  "trading",
  "forex",
  "backtesting",
  "algorithmic trading"
]


classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering"
]

[project.optional-dependencies]
mt5 = ["metatrader5"]

[project.urls]
Homepage = "https://github.com/MegaJoctan/StrategyTester5"
Repository = "https://github.com/MegaJoctan/StrategyTester5"
